updating file html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <main id="content">
-        <img src="" alt="freecodecamp Image" />
+        <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freecodecamp Image" />
         <h1>Roman Numeral Converter</h1>
         <form>
             <h3>Enter a Number:</h3>
-            <input type="number" id="input-number" />
-            <input type="submit" value="Convert">
+            <input type="number" id="number" />
+            <input type="submit" id="convert-btn" value="Convert" />
         </form>
-        <div id="result-number"></div>
+        <div id="output"></div>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
